--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
       href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap"
       rel="stylesheet"
     />
+    
 
     <title>YOUTOOART</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
 </html>
