--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/Icons SVG/blogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link
@@ -25,7 +25,7 @@
     />
     
 
-    <title>CINETROOP</title>
+    <title>CineTroop</title>
   </head>
   <body>
     <div id="root"></div>
